--- a/w1/v1/package.json
+++ b/w1/v1/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "next": "^13.5.6",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "latest",
